--- a/novo.html
+++ b/novo.html
@@ -43,7 +43,7 @@ function MM_swapImage() { //v3.0
         <p>e<a href="consorcio novo.html" target="_blank"><img src="HISTORIA TEXTO.png" width="310" height="115" /></p></th>
       <th width="310" scope="col"><a href="https://veiculos.fipe.org.br/" target="_blank"><img src="Fipe TEXTO.png" width="310" height="115" /></th>
       <th width="310" scope="col"><a href="fale conosco novo.html" target="_blank"> <img src="Fale TEXTO.png" width="310" height="115" /></th>
-      <th width="727" scope="col"><img src="2_VIA_TEXTO-removebg-preview.png" width="400" height="188" /><a href="https://web.whatsapp.com/" target="_blank"></th>
+      <th width="727" scope="col"><a href="https://web.whatsapp.com/" target="_blank"><img src="2_VIA_TEXTO-removebg-preview.png" width="400" height="188" /><a href="https://web.whatsapp.com/" target="_blank"></th>
     </tr>
   </table>
   </p>
