--- a/index.html
+++ b/index.html
@@ -1,116 +1,143 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtda
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-<style type="text/css">
-body {
-	background-image: url(fundo%20oficial.jpg);
-}
-</style>
-<script type="text/javascript">
-function MM_swapImgRestore() { //v3.0
-  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-}
-function MM_preloadImages() { //v3.0
-  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulário | GN</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            background-image: linear-gradient(to right, rgb(20, 147, 220), rgb(17, 54, 71));
+        }
+        .box{
+            color: white;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 15px;
+            border-radius: 15px;
+            width: 20%;
+        }
+        fieldset{
+            border: 3px solid dodgerblue;
+        }
+        legend{
+            border: 1px solid dodgerblue;
+            padding: 10px;
+            text-align: center;
+            background-color: dodgerblue;
+            border-radius: 8px;
+color= white
 
-function MM_findObj(n, d) { //v4.01
-  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
-  if(!x && d.getElementById) x=d.getElementById(n); return x;
-}
-
-function MM_swapImage() { //v3.0
-  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
-}
-</script>
+        }
+        .inputBox{
+            position: relative;
+        }
+        .inputUser{
+            background: none;
+            border: none;
+            border-bottom: 1px solid white;
+            outline: none;
+            color: white;
+            font-size: 15px;
+            width: 100%;
+            letter-spacing: 2px;
+        }
+        .labelInput{
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            pointer-events: none;
+            transition: .5s;
+        }
+        .inputUser:focus ~ .labelInput,
+        .inputUser:valid ~ .labelInput{
+            top: -20px;
+            font-size: 12px;
+            color: dodgerblue;
+        }
+        #data_nascimento{
+            border: none;
+            padding: 8px;
+            border-radius: 10px;
+            outline: none;
+            font-size: 15px;
+        }
+        #submit{
+            background-image: linear-gradient(to right,rgb(0, 92, 197), rgb(90, 20, 220));
+            width: 100%;
+            border: none;
+            padding: 15px;
+            color: white;
+            font-size: 15px;
+            cursor: pointer;
+            border-radius: 10px;
+        }
+        #submit:hover{
+            background-image: linear-gradient(to right,rgb(0, 80, 172), rgb(80, 19, 195));
+        }
+    </style>
 </head>
+<body>
+<iframe width="704" height="396" src="https://www.youtube.com/embed/prfZFyp4XZk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="704" height="396" src="https://www.youtube.com/embed/prfZFyp4XZk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+aaaaa
 
-<body onload="MM_preloadImages('../../Downloads/daily.jfif','../../Downloads/categorias.jfif')"><center>
-  <p>
-  <p><img src="caminhao.gif" width="411" height="348" />
-  <a href="gif caminhaoo.gif">gif caminhaoo</a>
-  <table width="1360" border="1">
-    <tr>
-      <th width="310" scope="col"><p>&nbsp;</p>
-        <p>e<a href="consorcio novo.html" target="_blank"><img src="HISTORIA TEXTO.png" width="310" height="115" /></p></th>
-      <th width="310" scope="col"><a href="https://veiculos.fipe.org.br/" target="_blank"><img src="Fipe TEXTO.png" width="310" height="115" /></th>
-      <th width="310" scope="col"><a href="fale conosco novo.html" target="_blank"> <img src="Fale TEXTO.png" width="310" height="115" /></th>
-      <th width="727" scope="col"><img src="2_VIA_TEXTO-removebg-preview.png" width="400" height="188" /><a href="https://web.whatsapp.com/" target="_blank"></th>
-    </tr>
-  </table>
-  </p>
-  <p></p>
-  <table width="1360" border="1" bgcolor="#FFFFFF">
-    <tr>
-      <td width="300"><a href="https://web.whatsapp.com/" target="_blank"><img src="zap.jfif" width="300" height="168" /></a></td>
-      <td width="1044" bgcolor="#FFFFFF"><div>
-        <h1><span data-contrast="auto" xml:lang="PT-BR" lang="PT-BR">SAIBA MAIS SOBRE SOLUÇÕES PARA SEUS CONSÓRCIOS E FINANCIAMENTOS</span><span data-ccp-props="{'201341983':0,'335559739':160,'335559740':259}"> </span></h1>
-        <div>
-          <h1><span data-contrast="auto" xml:lang="PT-BR" lang="PT-BR">CLIQUE AQUI !!!</span><span data-ccp-props="{'201341983':0,'335559739':160,'335559740':259}"> </span></h1>
-        </div></td>
-    </tr>
-  </table>
-  <p>&nbsp;</p>
-  <table width="1348" border="1" bgcolor="#FFFFFF">
-    <tr>
-      <td width="990"><h1>A falta de crédito acaba de ficar para trás</h1>
-        <div>
-          <div>
-            <h1>O <strong>Banco CNH Industrial</strong> é o banco da IVECO no Brasil oferecendo soluções financeiras completas e customizadas para atender às necessidades de clientes e concessionários da marca. </h1>
-          </div>
-          <div>
-            <h1>Com o Banco de quem TRANSPORTA, você dispões de uma equipe comercial especializada para adquirir a sua máquina IVECO com mais agilidade e flexibilidade na própria concessionária. </h1>
-          </div>
-          <div>
-            <h1>No campo, na obra ou na estrada, conte com o Banco CNH Industrial, o Banco de quem <strong>PRODUZ, CONSTRÓI e TRANSPORTA</strong>.</h1>
-          </div>
-          <div>
-            <h1>Procure o concessionário IVECO da sua região para simular o seu financiamento.</h1>
-          </div>
-        </div>
-        <h2>&nbsp;</h2></td>
-      <td width="342"><img src="carro 6.jfif" width="285" height="177" /></td>
-    </tr>
-  </table>
-  <hr />
-  <table width="1352" border="1">
-    <tr>
-      <td>May 28, 2022</td>
-    </tr>
-  </table>
-  <p>&nbsp;</p>
-  <table width="1353" border="1">
-    <tr>
-      <th width="486" scope="col" bgcolor="#FFFFFF"><h1><strong>Pare de sonhar, está na hora de transformar em realidade!</strong> Aqui na Consórcio Recovery Clean, nós temos o melhor consórcio para você! São as melhores condições, com ou sem entradas, que vão te ajudar a conquistar aquele objetivo!</h1></th>
-      <th width="443" scope="col"><img src="negocios.jfif" width="380" height="254" /></th>
-      <th width="402" bgcolor="#FFFFFF" scope="col"><h1>TAXAS ELEVADAS JÁ NÃO SÃO MAIS ACEITAS </h1>
-        <h1>FAÇA UMA SIMULAÇÃO COM NOSSOS REPRESENTANTES!!!!</h1></th>
-    </tr>
-  </table>
-  <table width="1354" border="1" cellspacing="0" cellpadding="0">
-    <tr>
-      <td width="721" bgcolor="#FFFFFF"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','../../Downloads/daily.jfif',1)"><img src="carro.jfif" width="290" height="174" /></a>
-        <p><strong>O futuro entre a sustentabilidade e a inteligência artificial </strong></p>
-        <p>Ultimamente um dos temas mais comentados na sociedade é a sustentabilidade. Do mesmo modo, no meio automobilístico isso não é diferente. </p>
-      <p>Somando a busca por fontes de energia renováveis e a conscientização com o meio ambiente, esse novo movimento promete trazer em breve mais grandes novidades. Quem sabe não estamos próximos de uma nova revolução dos carros?</p></td>
-      <td width="627" bgcolor="#FFFFFF"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','../../Downloads/categorias.jfif',1)"><img src="carro 2.jfif" width="292" height="173" /></a>
-        <p><strong>As corridas e sua contribuição para a evolução dos carros </strong></p>
-        <p>A era das corridas certamente teve uma grande contribuição para a evolução dos carros. <strong>Para provar o valor de seus veículos, determinadas indústrias tiveram a ideia de colocar seus automóveis em provas de corrida.</strong> O evento acabou virando uma febre no país. </p>
-      <p>A ideia era promover as vendas dos carros. Porém, a proporção acabou sendo bem maior. As corridas trouxeram à tona a opinião dos consumidores com relação aos carros. E dessa maneira, o público tornou-se mais exigente. </p></td>
-    </tr>
-  </table>
-  <p>&nbsp;</p>
-  <p><a href="https://web.whatsapp.com/" target="_blank"><img src="ultimo gif da pagina.gif" /></p>
-  <p>&nbsp;</p>
 
-</center>
+aaaaa
+    <div class="box">
+        <form action="">
+            <fieldset>
+                <legend><b>Fórmulário de Clientes</b></legend>
+                <br>
+                <div class="inputBox">
+                    <input type="text" name="nome" id="nome" class="inputUser" required>
+                    <label for="nome" class="labelInput">Nome completo</label>
+                </div>
+                <br><br>
+                <div class="inputBox">
+                    <input type="text" name="email" id="email" class="inputUser" required>
+                    <label for="email" class="labelInput">Email</label>
+                </div>
+                <br><br>
+                <div class="inputBox">
+                    <input type="tel" name="telefone" id="telefone" class="inputUser" required>
+                    <label for="telefone" class="labelInput">Telefone</label>
+                </div>
+                <p>Sexo:</p>
+                <input type="radio" id="feminino" name="genero" value="feminino" required>
+                <label for="feminino">Feminino</label>
+                <br>
+                <input type="radio" id="masculino" name="genero" value="masculino" required>
+                <label for="masculino">Masculino</label>
+                <br>
+                <input type="radio" id="outro" name="genero" value="outro" required>
+                <label for="outro">Outro</label>
+                <br><br>
+                <label for="data_nascimento"><b>Data de Nascimento:</b></label>
+                <input type="date" name="data_nascimento" id="data_nascimento" required>
+                <br><br><br>
+                <div class="inputBox">
+                    <input type="text" name="cidade" id="cidade" class="inputUser" required>
+                    <label for="cidade" class="labelInput">Cidade</label>
+                </div>
+                <br><br>
+                <div class="inputBox">
+                    <input type="text" name="estado" id="estado" class="inputUser" required>
+                    <label for="estado" class="labelInput">Estado</label>
+                </div>
+                <br><br>
+                <div class="inputBox">
+                    <input type="text" name="endereco" id="endereco" class="inputUser" required>
+                    <label for="endereco" class="labelInput">Endereço</label>
+                </div>
+                <br><br>
+                <input type="submit" name="submit" id="submit">
+            </fieldset>
+        </form>
+    </div>
 </body>
 </html>
